--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "express": "^4.20.0",
+    "random": "^5.1.0",
     "react": "^18.3.1",
     "socket.io": "^4.7.5"
   },
